4 files modified, 7 added

--- a/src/app/flight/flight.component.html
+++ b/src/app/flight/flight.component.html
@@ -79,7 +79,7 @@
         placeholder="Enter a valid email address"
       />
     </div>
-    <br />
+    <br />.
     <br />
     <div class="col-12" style="text-align:center">
       <b><label for="dob">Date Of Birth</label>&nbsp;</b>
@@ -196,7 +196,8 @@
     <br>
     <div class="col-12" style="text-align:center">
       <input type="submit" class="btn btn-success" value="save" /> &nbsp; &nbsp;
-      <input type="Reset" class="btn btn-success" value="Reset"/>
+      <input type="Reset" class="btn btn-success" value="Reset"/>&nbsp; &nbsp;
+      <button  onclick="window.history.back()">Back</button>
     </div>
     <div style="color-red" class="col-12" style="text-align:right">
     <b><u>formoredetails</u></b><br>
